# tabacchi

./: .gitignore  LICENSE  README.md  pyproject.toml
tabacchi/: browserWebkit2.py  config.py  main.py  ordini.py  preferences.cfg  preferencesTabacchi.py  stampe.py  stats.py  utility.py
tabacchi/demo/: preferences.cfg  tabacchi.sqlite
tabacchi/resources/: extMsgDialog.glade  importDialog.glade  labelsDialog.glade  mainWindowContent.glade  ordineDialog.glade  preferencesDialog.glade  preferencesTabacchi.glade  statsDialog.glade  suppletivoDialog.glade  tabacchiDialog.glade  u88Dialog.glade  verificaOrdineDialog.glade
