[tool.poetry]
name = "tabacchi"
version = "0.3.1"
description = "Tabacchi - Gestionale per tabaccherie"
authors = ["Francesco Guarnieri"]
license = "Apache-2.0"
include = ["LICENSE", "resources/*", "demo/*"]

# In https://pypi.org/pypi/PyBluez/json pyobjc-core is listed under requires_dist without any platform marker.
# Cant'add pybluez workaround:
# poetry add git+https://github.com/pybluez/pybluez#0.23
[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.38.0"
xlrd = "^1.2.0"
xlwt = "^1.3.0"
reportlab = "^3.5.55"
PyPDF2 = "^1.26.0"
keyring = "^21.5.0"
playsound = "^1.2.2"
pycrypto = "^2.6.1"
appdirs = "^1.4.4"
matplotlib = "^3.3.3"
pybluez = {git = "https://github.com/pybluez/pybluez", rev = "0.23"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tabacchi = "tabacchi.main:start"
